--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,28 @@ html, body{
 
 
 @layer utilities{
+
+  @keyframes blink {
+
+    0%,
+    50%,
+    100% {
+      opacity: 1;
+    }
+
+    25%,
+    75% {
+      opacity: 0;
+    }
+    
+  }
+
+  .animate-blink{
+    animation: blink 0.8s step-end infinite;
+  }
+
+
+
   @keyframes loading {
     0% {
       transform: translateX(-100%);
